Fixed layout overflowing.

--- a/src/components/LayoutAside/style.styl
+++ b/src/components/LayoutAside/style.styl
@@ -8,6 +8,7 @@
     position: relative
     background: --layout-aside-background
     width: --layout-aside-width
+    flex: 0 0 --layout-aside-width
 
     /* Fix firefox can't set width smaller than content on flex item */
     min-width: 0
